--- a/Esperanto Translations/.obsidian/workspace
+++ b/Esperanto Translations/.obsidian/workspace
@@ -6,6 +6,7 @@
       {
         "id": "7e2f0cd72667cbce",
         "type": "leaf",
+        "active": true,
         "state": {
           "type": "markdown",
           "state": {
@@ -17,7 +18,6 @@
       {
         "id": "e8c253adc4d6bfe9",
         "type": "leaf",
-        "active": true,
         "state": {
           "type": "markdown",
           "state": {
@@ -83,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Preamble/Esperanto.md"
+                "file": "Preamble/English.md"
               }
             }
           }
@@ -95,6 +95,7 @@
     "collapsed": true
   },
   "lastOpenFiles": [
+    "Preamble/English.md",
     "UN Declaration of Human Rights/Untitled.md"
   ]
 }
